--- a/.github/workflows/test-django.yaml
+++ b/.github/workflows/test-django.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.10]
+        python-version: ['3.10']
         # Will be run for each python version in this array
     steps:
     - uses: actions/checkout@v3
