fixed naming error

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Install doctl
       uses: digitalocean/action-doctl@v2
       with:
-        token: ${{ secrets.DO_API_TOKEN_API }}
+        token: ${{ secrets.DO_API_TOKEN_KEY }}
     - name: Login to DO Container Registry with short-lived creds
       run: doctl registry login --expiry-seconds 1200
     - name: Build container image
