--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,7 @@ jobs:
         kubectl set image deployment/django-k8s-web-deployment django-k8s-web=registry.digitalocean.com/max-falk-containers/django-k8s-web:${GITHUB_SHA::7}
     - name: Wait for rollout to finish
       run: |
-        kubectl rollout status deploy deployment/django-k8s-web-deployment
+        kubectl rollout status deployment/django-k8s-web-deployment
     - name: Migrate database
       run: |
         export SINGLE_POD_NAME=$(kubectl get pod -l app=django-k8s-web-deployment -o jsonpath="{.items[0].metadata.name}")
