--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
       run: |
         docker build -f Dockerfile \
           -t registry.digitalocean.com/max-falk-containers/django-k8s-web:latest \
-          -t registry.digitalocean.com/max-falk-containers/django-k8s-web:${GITHUB_SHA::7} \
+          -t registry.digitalocean.com/max-falk-containers/django-k8s-web:${GITHUB_SHA::7}-${GITHUB_RUN_ID} \
           .
     - name: Push image
       run: |
